  Remove buildall.bat (#2013576)
  New option to enable plugins (disabled by default) (#2013845)
  Add dialog listing available plugins (#2021722)
  Refresh compare after changing filter (#2017426)
  Add "Open Conflict" for file/folder compare menus (#2025472)
  Add -u commandline parameter as alternative to -ub (#2029275)
  Remove RCLocalizationHelper plugin (#2029457)
  BugFix: Use system codepage for paths (#1979429, #2008581)
  BugFix: ANSI build crash in folder compare (#2010053)
  BugFix: Add insert/overtype mode indicator to statusbar (#2015174)
  BugFix: Detected UTF-8 encoding shown as 65001 (#2012377)
  Bugfix: Don't warn about closing multiple windows when only one
   window is open (#2010463)
  BugFix: Moving was allowed for protected items (#2023734)
  BugFix: Could change EOL style for protected file (#2025781)

WinMerge 2.10.x (R2_10) branch created (r5561)

WinMerge 2.9.1.5 - 2008-07-04 (r5560)
  Manual: Copy editing (#2000322, #2005418)
  Manual: Clarify 64-bit support (#2002431)
  Reduce executable sizes (#2003203)
  Release Notes update (#2007673, r5557)
  BugFix: Possible crash when enabling line filter (#2004160)
  BugFix: Location Pane flickers when scrolling (#1938177, #2005031)
  BugFix: Use system codepage for paths (#1979429, #2008581)
  BugFix: Random crashes in folder compare (#2005308)
  Translation updates:
  - Chinese Traditional (#2007426)

WinMerge 2.9.1.4 - 2008-06-24 (r5518)
  Use PCRE regular expressions in the editor (#1991259)
  Installer: install to all users (#1460517)
  Update release notes (#1990886, #1995265, #1999880)
  Manual: Use PNG files (#1988845, #1989744)
  BugFix: Temp paths in Reports created from archive file (#1984346)
  BugFix: ISL file syntax highlighting starts comment with { (#1981326)
  BugFix: Crash when starting a second instance (#1993835)
  BugFix: Crash when starting WinMerge with only one path (#1994402)
  BugFix: Messages missing from installer translations (r5506)