@@ -14,6 +14,7 @@ WinMerge 2.9.1.6
   Add "Open Conflict" for file/folder compare menus (#2025472)
   Add -u commandline parameter as alternative to -ub (#2029275)
   Remove RCLocalizationHelper plugin (#2029457)
+  Clarify Supercopier caused hang in release notes (#2030040)
   BugFix: Use system codepage for paths (#1979429, #2008581)
   BugFix: ANSI build crash in folder compare (#2010053)
   BugFix: Add insert/overtype mode indicator to statusbar (#2015174)
